elixir/force-app/main/default/objects/Account/fields/Transfer_need_to_approve__c.field-meta.xml
<CustomField>
    <fullName>Transfer_need_to_approve__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Transfer need to approve</label>
    <type>Checkbox</type>
</CustomField>