elixir/force-app/main/default/objects/Account/fields/Trust_Date_Of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Trust_Date_Of_Establishment__c</fullName>
    <label>Trust Date Of Establishment</label>
    <type>Date</type>
</CustomField>