elixir/force-app/main/default/objects/Account/fields/Upfront_Payment__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Payment__c</fullName>
    <label>Upfront Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>