elixir/force-app/main/default/objects/Account/fields/Upfront_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Payment_Amount__c</fullName>
    <label>Upfront Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>