elixir/force-app/main/default/objects/Account/recordTypes/Aggregator.recordType-meta.xml
<RecordType>
    <fullName>Aggregator</fullName>
    <active>true</active>
    <label>Aggregator</label>
</RecordType>