elixir/force-app/main/default/objects/Account/recordTypes/Broker_Type.recordType-meta.xml
<RecordType>
    <fullName>Broker_Type</fullName>
    <active>true</active>
    <label>Broker Type</label>
</RecordType>