elixir/force-app/main/default/objects/Account/recordTypes/Sales_Channel.recordType-meta.xml
<RecordType>
    <fullName>Sales_Channel</fullName>
    <active>true</active>
    <label>Sales Channel</label>
</RecordType>