elixir/force-app/main/default/objects/Account/recordTypes/Solicitor.recordType-meta.xml
<RecordType>
    <fullName>Solicitor</fullName>
    <active>true</active>
    <label>Solicitor</label>
</RecordType>