elixir/force-app/main/default/objects/Account/recordTypes/Valuer.recordType-meta.xml
<RecordType>
    <fullName>Valuer</fullName>
    <active>true</active>
    <label>Valuer</label>
</RecordType>