elixir/force-app/main/default/objects/Account/listViews/Broker_Account.listView-meta.xml
<ListView>
    <fullName>Broker_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>Brokers_BDM__c</columns>
    <columns>Aggregator__c</columns>
    <columns>Broker_ACL_Number__c</columns>
    <columns>ACR__c</columns>
    <columns>ACR_Verified__c</columns>
    <columns>Commission_Paid_To__c</columns>
    <columns>Upfront_Payment_Percentage__c</columns>
    <columns>Trail_Percentage__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Broker_Type</value>
    </filters>
    <label>Broker Account</label>
</ListView>