elixir/force-app/main/default/objects/Account/listViews/ints__AllAccounts.listView-meta.xml
<ListView>
    <fullName>ints__AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Brokers_BDM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>