elixir/force-app/main/default/objects/Account/listViews/ints__MyAccounts.listView-meta.xml
<ListView>
    <fullName>ints__MyAccounts</fullName>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>