elixir/force-app/main/default/objects/Account/listViews/ints__PlatinumandGoldSLACustomers.listView-meta.xml
<ListView>
    <fullName>ints__PlatinumandGoldSLACustomers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Platinum and Gold SLA Customers</label>
</ListView>