elixir/force-app/main/default/objects/Account/listViews/Valuer_Accounts.listView-meta.xml
<ListView>
    <fullName>Valuer_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>clcommon__Legal_Entity_Type__c</columns>
    <columns>Insurer__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Policy_Expiry_Date__c</columns>
    <columns>clcommon__Status__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Valuer</value>
    </filters>
    <label>Valuer Accounts</label>
</ListView>